syntax = "proto3";

option csharp_namespace = "TP2_SD";
import "google/protobuf/timestamp.proto"; //importação para usar o timestamp

package greet;

//APLICAÇÃO CLIENTE
service ClienteUtilizadorP {
	rpc RegistarAposta (Aposta) returns (EstadoAposta);
	rpc HistoricoApostas (PedidoHistorico) returns (ResultadoHistorico);
}
message Aposta {
	int32 NumeroApostador = 1; //NIF
	repeated int32 numeros = 2;
	repeated int32 estrelas = 3;
	google.protobuf.Timestamp DataAposta = 4; 
}
message EstadoAposta {
	bool Estado = 1;
}
message PedidoHistorico {
	int32 NumeroApostador = 1;
}
message Historico{
	int32 NumeroAposta=1;
	string Numeros =2;//Numero Utilizador + Chave + Numero Sorteio
	string Estrelas =3;
	google.protobuf.Timestamp DataAposta=4;
	int32 Premio=5;
}
message ResultadoHistorico {
	bool Estado = 1;
	repeated Historico HistoricoApostas = 2; 
} 

	//APLICAÇÃO GESTOR SORTEIO
service ClienteGestorSorteioP {
	rpc GerirSorteio (Resultado) returns (EstadoResultado);
}

message Resultado {
	repeated int32 numeros = 1;
	repeated int32 estrelas = 2;
}
message Vencedor{
	int32 NumeroAposta=1;
	int32 NIF=2;
	string Numeros=3;//Numero Utilizador + Chave + Numero Sorteio
	string Estrelas=4;
	google.protobuf.Timestamp DataAposta=5;
	int32 Premio=6;
}

message EstadoResultado {
	bool Estado = 1;
	repeated Vencedor ApostasVencedoras = 2;
}

	//APLICAÇÃO ADMINISTRADOR
service ClienteAdministradorP{
	rpc Arquivar (ArquivoInput) returns (ArquivoResposta);
	rpc Consultar (ConsultarInput) returns (ConsultarResposta);
}

message ArquivoInput {
	bool Pedido = 1; //Numero Utilizador + Chave
}
message ArquivoResposta {
	bool EstadoArquivo = 1;
}
message ConsultarInput {
	bool Pedido = 1;
}
message Utilizador{
	int32 NIF=1;
}
message ConsultarResposta {
	bool Estado = 1;
	repeated Utilizador Utilizadores=2;
	repeated Historico Apostas =3;
}